# python-libpq-dev

./: .gitignore  CHANGELOG.rst  README.rst  build.sh  setup.cfg
libpq/include/: README
libpq/lib/: README
