[metadata]
name = libpq-dev
license = NCBI license
author = NCBI
author-email = python-core@ncbi.nlm.nih.gov

is_pure = 0

[auto-version]
type = file
value = VERSION

[files]
data_files =
    bin = libpq/bin/pg_config
    lib = libpq/lib/libpq.a
    include = libpq/include/**/*.h

[tox]
envlist = py{27,33,34}
skipsdist = True

[testenv]
passenv = LD_LIBRARY_PATH

commands =
    python setup.py bdist_wheel