[metadata]
name = libpq-dev
summary = Psycopg2 binary dependencies
author = NCBI
license = NCBI license
author-email = python-core@ncbi.nlm.nih.gov
home-page = https://github.com/ncbi/python-libpq-dev
supported-platform = Linux

is_pure = 0

classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Development Status :: 5 - Production/Stable

[auto-version]
type = file
value = VERSION

[files]
data_files =
    bin = libpq/bin/pg_config
    lib = libpq/lib/libpq.a
    include = libpq/include/**/*.h

[tox]
envlist = py{27,33,34}
skipsdist = True

[testenv]
passenv = LD_LIBRARY_PATH

commands =
    python setup.py bdist_wheel